Archive2/6f/49f5be0cbc8547/output
+ g++ -mfma4 main.cpp
main.cpp: In function 'void bar()':
main.cpp:6:48: error: there are no arguments to '_mm256_macc_ps' that depend on a template parameter, so a declaration of '_mm256_macc_ps' must be available [-fpermissive]
     _mm256_macc_ps(__m256(), __m256(), __m256());
                                                ^
main.cpp:6:48: note: (if you use '-fpermissive', G++ will accept your code, but allowing the use of an undeclared name is deprecated)
