Archive2/6f/49f5be0cbc8547/main.cpp
#include <immintrin.h>
//#include <x86intrin.h>

template<bool foo>
void bar() {
    _mm256_macc_ps(__m256(), __m256(), __m256());
}

int main() {
}